--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,4 +3,68 @@ page-home {
         background: #000000;
         color: #fff;
     }    
+
+    .circle{
+        position: relative;
+        width: 300px;
+        background: #00aaff;
+        height: 300px;
+        border-radius: 300px;
+        margin: 80px auto;
+        padding: 25px;
+        -moz-box-shadow:    inset 0 0 15px #000000;
+        -webkit-box-shadow: inset 0 0 15px #000000;
+        box-shadow:         inset 0 0 15px #000000;
+    }
+
+    .circle::after{
+        content: "+";
+        position: absolute;
+        bottom: -28px;
+        color: #fff;
+        font-size: 50px;
+        left: 50%;
+        margin-left: -50px;
+        width: 80px;
+        height: 80px;
+        background: #00a8fd;
+        text-align: center;
+        border-radius: 80px;
+        line-height: 80px;
+        border: 5px solid #005784;
+        text-shadow: 1px 0px 0px #0078b5;
+        box-shadow: 0px 0px 15px #000;
+    }
+
+    .circle-interno{
+        width: 250px;
+        background: #1d1d1d;
+        height: 250px;
+        border-radius: 250px;
+        border: 1px solid #000000;
+        margin: auto;
+        -moz-box-shadow:    inset 0 0 5px #000000;
+        -webkit-box-shadow: inset 0 0 5px #000000;
+        box-shadow:         inset 0 0 5px #000000;
+    }
+
+    .medicao-info{
+        text-align: center;
+        color: #d1d1d1;
+        margin-top: 60px;
+        font-size: 12px;
+    }
+
+    .valor-medicao{
+        text-align: center;
+        margin-top: 20px;
+        font-size: 60px;
+        margin-bottom: -5px;
+        color: #aae2ff;
+    }
+
+    .unidade-medida{
+        text-align: center;
+        color: #5f5f5f;
+    }
 }
