--- a/src/pages/tabs/tabs.scss
+++ b/src/pages/tabs/tabs.scss
@@ -1,11 +1,12 @@
-.tabs-md .tabbar{
+.tabs-md .tabbar, .tabs-ios .tabbar{
     background: #1d1d1d !important;
     -moz-box-shadow:    inset 0 0 10px #000000;
     -webkit-box-shadow: inset 0 0 10px #000000;
     box-shadow:         inset 0 0 10px #000000;
 }
 
-.tabs-md .tab-button[aria-selected=true], .tabs-md .tab-button[aria-selected=true] .tab-button-icon{
+.tabs-md .tab-button[aria-selected=true], .tabs-md .tab-button[aria-selected=true] .tab-button-icon, 
+.tabs-ios .tab-button[aria-selected=true], .tabs-ios .tab-button[aria-selected=true] .tab-button-icon{
     color: #ffffff !important;
 }
 
@@ -13,7 +14,8 @@
     color: rgba(255, 255, 255, 0.6);
 }
     
-.footer-md::before, .tabs-md[tabsPlacement="bottom"] > .tabbar::before{
+.footer-md::before, .tabs-md[tabsPlacement="bottom"] > .tabbar::before,
+.footer-ios::before, .tabs-ios[tabsPlacement="bottom"] > .tabbar::before{
     top: -1px;
     bottom: auto;
     background-position: left 0 top 0;
