Home Padding ajust

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -29,7 +29,7 @@ page-home {
         background: #00a8fd;
         text-align: center;
         border-radius: 100px;
-        padding-top: 15px;
+        padding: 15px;
         border: 5px solid #005784;
         text-shadow: 1px 0px 0px #0078b5;
         -webkit-box-shadow: 0px 0px 15px #000;
